--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Marcus Lower            </a>
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1>Marcus Lower</h1>
+			<h1>Dr. Marcus Lower</h1>
 				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
@@ -99,15 +99,29 @@ Marcus Lower            </a>
      alt="photo"
      style="float: right; margin-left: 15px; margin-bottom: 15px"
      width="180" /></p>
-<p>Welcome to my website! I am a postdoctoral research fellow at <a href="https://www.csiro.au/en/Research/Astronomy">CSIRO Astronomy and Space Science</a>.
+<p>I am a CSIRO Early Research Career (CERC) postdoctoral research fellow at <a href="https://www.csiro.au/en/Research/Astronomy">CSIRO Astronomy and Space Science</a>.
   My work primarily involves developing and using Bayesian inference techniques to learn more about the properties of pulsars - rotating neutron stars that emit beams of electromagnetic radiation from their magnetic poles.
-  I am also the priniciple investigator of the Parkes `P574' young pulsar timing project, which uses the CSIRO 64-m Parkes radio telescope (AKA `Murriyang') to monitor 270 energectic pulsars.
+  I am also the priniciple investigator of the Parkes `P574' young pulsar timing project, which uses the CSIRO 64-m Parkes radio telescope (AKA 'Murriyang') to monitor 270 energectic pulsars.
 </p>
 <p>Other interests of mine include follow-up parameter estimation of gravitational-wave events seen by Advanced LIGO and Virgo, and searches for the stochastic gravitational-wave background with pulsar timing arrays.</p>
 <hr>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Dec 21 2022: <i>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</i> submitted to ApJ.</li>
+<li>Dec 16 2022: I have officially graduated from my PhD at Swinburne University of Technology! <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Dr. Marcus Lower <a href="https://t.co/VIj8hj5ufr">pic.twitter.com/VIj8hj5ufr</a></p>&mdash; Marcus Lower (@astromelow) <a href="https://twitter.com/astromelow/status/1604815704737226753?ref_src=twsrc%5Etfw">December 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  </li>
+<li>Dec 2 2022: Today I am giving the MQAAAstro colloquium at Macquarie University where I am talking about <i>The Parkes magnetar monitoring programme</i>.</li>
+<li>Dec 1 2022: <a href="https://www.astronomerstelegram.org/?read=15783"><i>FRB20221128A found by UTMOST-NS</i></a>! The first detection of a fast radio burst using the newly upgraded North-South arm of the Molonglo telescope. Huge congratualtions to the UTMOST team on this terrific miletone!!</li>
+<li>Nov 11 2022: <i>A birefringent pair plasma within the near-field environment of a radio-loud magnetar</i> submitted to Nature Astronomy.</li>
+<li>Oct 31 2022: This week I'm at the Parkes Obervatory for the <a href="https://www.atnf.csiro.au/research/pulsar/orange2022/">2022 Australiasian (AKA: Orange) Pulsar and FRB workshop</a>. I will be talking about the magnetar monitoring programme on Parkes.</li>
+<li>Sep 28 2022: <i>Pulsar polarization: A broad-band population view with the Parkes Ultra-Wideband receiver</i> submitted to MNRAS.</li>
+<li>Aug 1 2022: I am in Busan, South Korea for the next two weeks for the 2022 IAU General Assembly! Along with attending various talks across a wide range of astronomy, I'll be giving a talk on <i>Radio-loud magnetars as Galactic fast radio burst analogues</i> at the IAU Symposium 369.</li>
+<li>Jul 18 2022: This week I am attending the 2022 ATNF Science Retreat, being held in the Barossa Valley!</li>
+<li>27 July 2022: This week I am in Hobart, Tasmania for the 2022 ASA Meeting. I'll be giving a talk on <i>Untangling the twisted polarised emission of a radio-loud magnetar</i>.</li>
+<li>Apr 22 2022: <i>Propagation of a fast radio burst through a birefringent relativistic plasma</i> submitted to PRD. Read the preprint here - <a href="https://arxiv.org/abs/2204.10816">arXiv:2204.10816</a>.</li>
+<li>Mar 8 2022: <i>Circularly polarized radio emission from the repeating fast radio burst source FRB 20201124A</i> accepted to MNRAS! Read the updated preprint here - <a href="https://arxiv.org/abs/2109.11535">arXiv:2109.11535</a>.</li>
+<li>Jan 21 2022: We performed follow-up observations of the FRB-emitting magnetar SGR 1935+2154 with Parkes/Murriyang after two recent outbursts. Read about our non-detections here - <a href="">ATel #15172</a>.</li>
+<li>Jan 9 2022: I have moved to sunny Sydney to start my CSIRO postdoc in-person!</li>
 <li>Nov 19 2021: I gave a talk on my recent paper on glitchy pulsars to the Monash gravitaional-wave research group. I was formerly a member of this group during my undergrad and honours years at Monash!</li>
 <li>Nov 16 2021: This evening I presented my work on the apparent braking of glitchy pulsars to the Oxford Pulsar group!</li>
 <li>Nov 8 2021: A warm welcome to the CSIRO Space and Astronomy community via the <a href="https://www.atnf.csiro.au/ATNF-DailyImage/archive/2021/08-Nov-2021.html">ATNF Daily Astronomy Picture</a>!</li>
@@ -126,7 +140,7 @@ Marcus Lower            </a>
 <li>Jun 21 2021: This week I am attending the <a href="http://ipta4gw.org/meetings/2021/">2021 IPTA Science Week</a>, where I giving a talk about observations of the Double Pulsar eclipses with MeerKAT. </li>
 <li>Apr 26 2021: I'm up in Sydney this week as the active Duty Astronomer for the <a =href="https://www.narrabri.atnf.csiro.au/">Australia Telescope Compact Array</a>. </li>
 <li>Apr 14 2021: <i>Effects of periodicity in observation scheduling on parameter estimation of pulsar glitches</i> by Dunn, Lower and Melatos accepted to MNRAS. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2104.07363">arXiv:2104.07363</a>. </li>
-<li>Mar 30 2021: <i>FRB 20210630A found by UTMOST! Read about it here - <a href="https://www.astronomerstelegram.org/?read=14745">ATel #14745</a>.</li>
+<li>Mar 30 2021: <i>FRB 20210630A found by UTMOST</i>! Read about it here - <a href="https://www.astronomerstelegram.org/?read=14745">ATel #14745</a>.</li>
 <li>Mar 6 2021: <i>Multi-frequency observations of SGR J1935+2154</i> accepted to MNRAS. </li>
 <li>Mar 3 2021: FRB 20210303A found by UTMOST, Molonglo's 1st FRB of 2021! Read about it here - <a href="https://www.astronomerstelegram.org/?read=14434">ATel #14434</a>. </li>
 <li>Feb 9 2021: <i>The Relativistic Binary Programme on MeerKAT: Science objectives and first results</i> accepted to MNRAS. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2102.05160">arXiv:2102.05160</a>. </li>
@@ -197,7 +211,6 @@ Marcus Lower            </a>
     <li class="list-group-item"><a href="mailto:mlower@swin.edu.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
     <li class="list-group-item"><a href="http://twitter.com/astromelow"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
     <li class="list-group-item"><a href="https://github.com/mlower"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
-    <li class="list-group-item"><a href="https://git.ligo.org/marcus.lower"><i class="fa fa-gitlab fa-lg"></i> Gitlab</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
