--- a/pages/publications.html
+++ b/pages/publications.html
@@ -86,7 +86,7 @@ Marcus Lower            </a>
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1>Marcus Lower</h1>
+      <h1>Dr. Marcus Lower</h1>
 				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
@@ -104,175 +104,37 @@ Marcus Lower            </a>
 
             <p>My full publication list can be found at the <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Lower%2C%20Marcus%20E%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>.</p>
 
+            <p>Listed below are papers that have either been accepted or submitted to refereed journals where I am the first author.</p>
+
 <hr>
 <h4></h4>
+<h4>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</h4>
+<h5>Marcus E. Lower, George Younes, Paul Scholz, et al. (2022)</h5>
+<p>Submitted to The Astrophys. J.</p>
+<hr>
+<h4>A birefringent pair plasma within the near-field environment of a radio-loud magnetar</h4>
+<h5>Marcus E. Lower, Simon Johnston, Maxim Lyutokov, et al. (2022)</h5>
+<p>Submitted to Nature Astronomy.</p>
+<hr>
 <h4>The impact of glitches on young pulsar rotational evolution</h4>
-<h5>Marcus E. Lower, et al. (2021)</h5>
+<h5>Marcus E. Lower, Simon Johnston, Liam Dunn, et al. (2021)</h5>
 <p><a href="https://doi.org/10.1093/mnras/stab2678">MNRAS 508 3251</a>, <a href="https://arxiv.org/abs/2109.07612">arXiv:2109.07612</a>.</p>
 <hr>
-<h4>Circularly polarized radio emission from the repeating fast radio burst source FRB 20201124A</h4>
-<h5>Pravir Kumar, Ryan M. Shannon, Marcus E. Lower, Shivani Bhandari, Adam T. Deller, Chris Flynn, Evan F. Keane (2021)</h5>
-<p>Submitted to MNRAS, <a href="https://arxiv.org/abs/2109.11535">arXiv:2109.11535</a>.</p>
-<hr>
-<h4>A phenomenological model for measuring generalised Faraday rotation</h4>
-<h5>Marcus E. Lower, (2021)</h5>
-<p>Posted to <a href="https://arxiv.org/abs/2108.09429">arXiv:2108.09429</a>.</p>
-<hr>
-<h4>A supernova remnant association for the fast-moving pulsar PSR J0908–4913 </h4>
-<h5>Simon Johnston and Marcus E. Lower, (2021)</h5>
-<p><a href="https://doi.org/10.1093/mnrasl/slab092">MNRAS Lett. 507 L41</a>, <a href="https://arxiv.org/abs/2108.09827">arXiv:2108.09827</a>.</p>
-<hr>
-<h4>On the Evidence for a Common-spectrum Process in the Search for the Nanohertz Gravitational-wave Background with the Parkes Pulsar Timing Array</h4>
-<h5>Boris Goncharov, et al., (2021)</h5>
-<p><a href="https://doi.org/10.3847/2041-8213/ac17f4">Astrophys. J. Lett. 917 L19</a>, <a href="https://arxiv.org/abs/2107.12112">arXiv:2107.12112</a>.</p>
-<hr>
-<h4>FRB 20210630A found by UTMOST</h4>
-<h5>Liam Dunn, et al., (2021)</h5>
-<p><a href="https://www.astronomerstelegram.org/?read=14807">The Astronomer's Telegram #14807</a>.</p>
-<hr>
-<h4>Effects of periodicity in observation scheduling on parameter estimation of pulsar glitches</h4>
-<h5>Liam Dunn, Marcus E. Lower and Andrew Melatos, (2021)</h5>
-<p><a href="https://doi.org/10.1093/mnras/stab1097">MNRAS 504 3399</a>, <a href="https://arxiv.org/abs/2104.07363">arXiv:2104.07363</a>.</p>
-<hr>
-<h4>The Relativistic Binary Programme on MeerKAT: Science objectives and first results</h4>
-<h5>Michael Kramer, et al., (2021)</h5>
-<p><a href="https://doi.org/10.1093/mnras/stab375">MNRAS 504 2094</a>, <a href="https://arxiv.org/abs/2102.05160">arXiv:2102.05160</a></p>
-<hr>
-<h4>Multi-frequency observations of SGR J1935+2154</h4>
-<h5>Matthew Bailes, et al., (2021)</h5>
-<p><a href="https://doi.org/10.1093/mnras/stab749">MNRAS 503 5367</a>, <a href="https://arxiv.org/abs/2103.06052">arXiv:2103.06052</a>.</p>
-<hr>
-<h4>FRB 20210630A found by UTMOST</h4>
-<h5>Ayushi Mandlik, et al., (2021)</h5>
-<p><a href="https://www.astronomerstelegram.org/?read=14745">The Astronomer's Telegram #14745</a>.</p>
-<hr>
-<h4>FRB 20210303A found by UTMOST</h4>
-<h5>Ayushi Mandlik, et al., (2021)</h5>
-<p><a href="https://www.astronomerstelegram.org/?read=14434">The Astronomer's Telegram #14434</a>.</p>
-<hr>
-<h4>Non-detection of radio pulses from GRB 210119A/Swift J1851.2-6148 with Parkes</h4>
-<h5>Marcus E. Lower, Rahul Sengar, Pravir Kumar and Ryan M. Shannon, (2021)</h5>
-<p><a href="https://www.astronomerstelegram.org/?read=14347">The Astronomer's Telegram #14347</a>.</p>
-<hr>
 <h4>The dynamic magnetosphere of Swift J1818.0-1607</h4>
-<h5>Marcus E. Lower, Simon Johnston, Ryan M. Shannon, Matthew Bailes and Fernando Camilo, (2021)</h5>
+<h5>Marcus E. Lower, Simon Johnston, Ryan M. Shannon, Matthew Bailes and Fernando Camilo (2021)</h5>
 <p><a href="https://doi.org/10.1093/mnras/staa3789">MNRAS 502 127</a>, <a href="https://arxiv.org/abs/2011.12463">arXiv:2011.12463</a>.</p>
 <hr>
-<h4>Gravitational-wave Constraints on the Equatorial Ellipticity of Millisecond Pulsars </h4>
-<h5>Rich Abbott, et al., (2020)</h5>
-<p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/abb655">Astrophys. J. Lett. 902 L21</a>, <a href="https://arxiv.org/abs/2007.14251">arXiv:2007.14251</a>.</p>
-<hr>
-<h4>Bayesian inference for compact binary coalescences with BILBY: Validation and application to the first LIGO-Virgo gravitational-wave transient catalogue</h4>
-<h5>Isobel Romero-Shaw, et al., (2020)</h5>
-<p><a href="https://doi.org/10.1093/mnras/staa2850">MNRAS 499 3295</a>, <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</p>
-<hr>
-<h4>VLBA detection of Swift J1818.0-1607</h4>
-<h5>Hao Ding, Adam T. Deller, Marcus E. Lower and Ryan M. Shannon, (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=14005">The Astronomer's Telegram #14005</a>.</p>
-<hr>
-<h4>A magnetar parallax</h4>
-<h5>Hao Ding, et al., (2020)</h5>
-<p><a href="https://academic.oup.com/mnras/article-abstract/498/3/3736/5895346?redirectedFrom=fulltext">MNRAS 498 3736</a>, <a href="https://arxiv.org/abs/2008.06438">arXiv:2008.06438</a>.</p>
-<hr>
-<h4>The MeerKAT Telescope as a Pulsar Facility: System verification and early science results from MeerTimer</h4>
-<h5>Matthew Bailes, et al., (2020)</h5>
-<p><a href="https://www.cambridge.org/core/journals/publications-of-the-astronomical-society-of-australia/article/meerkat-telescope-as-a-pulsar-facility-system-verification-and-early-science-results-from-meertime/A0ED62920EA3207804981FA721B912DF">Publ. Astron. Soc. Aust. 37 e028</a>, <a href="https://arxiv.org/abs/2005.14366">arXiv:2005.14366</a>.</p>
-<hr>
-<h4>The Parkes Pulsar Timing Array Project: Second data release</h4>
-<h5>Matthew Kerr, et al., (2020)</h5>
-<p><a href="https://www.cambridge.org/core/journals/publications-of-the-astronomical-society-of-australia/article/parkes-pulsar-timing-array-project-second-data-release/6F6DF02ED3B1D8FCAFBB0E259ABB2402">Publ. Astron. Soc. Aust. 37 e020</a>, <a href="https://arxiv.org/abs/2003.09780">arXiv:2003.09780</a>.</p>
-<hr>
-<h4>Resurgence in the radio flux of the magnetar XTE J1810-197</h4>
-<h5>Marcus E. Lower, et al., (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13840">The Astronomer's Telegram #13840</a>.</p>
-<hr>
-<h4>FRB200607 found at UTMOST</h4>
-<h5>Vivek Gupta, et al., (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13788">The Astronomer's Telegram #13788</a>.</p>
-<hr>
 <h4>Spectropolarimetric properties of Swift J1818.0−1607: a 1.4 s radio magnetar</h4>
-<h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes, (2020)</h5>
+<h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes (2020)</h5>
 <p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/ab9898">Astrophys. J. Lett. 896 L37</a>, <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</p>
 <hr>
-<h4>No radio counterpart for IGR J18179-1621 detected during a serendipitous VLBA observation</h4>
-<h5>Hao Ding, Adam T. Deller, Marcus E. Lower and Ryan M. Shannon, (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13737">The Astronomer's Telegram #13737</a>.</p>
-<hr>
-<h4>FRB200508 found at UTMOST</h4>
-<h5>Vivek Gupta, et al., (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13715">The Astronomer's Telegram #13715</a>.</p>
-<hr>
-<h4>Multi-band observations of Swift J1818.0−1607 with Parkes</h4>
-<h5>Marcus E. Lower and Ryan M. Shannon, (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13587">The Astronomer's Telegram #13587</a>.</p>
-<hr>
-<h4>MeerKAT observation of the radio magnetar candidate Swift J1818.0−1607</h4>
-<h5>Marcus E. Lower, et al., (2020)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13562">The Astronomer's Telegram #13562</a>.</p>
-<hr>
 <h4>The UTMOST pulsar timing programme II: Timing noise across the pulsar population</h4>
-<h5>Marcus E. Lower, et al., (2020)</h5>
+<h5>Marcus E. Lower, Matthew Bailes, Ryan M. Shannon, et al. (2020)</h5>
 <p><a href="https://doi.org/10.1093/mnras/staa615">MNRAS 494 228</a>, <a href="https://arxiv.org/abs/2002.12481">arXiv: 2002.12481</a>.</p>
 <hr>
-<h4>The UTMOST Survey for Magnetars, Intermittent pulsars, RRATs and FRBs I: System description and overview</h4>
-<h5>Vivek Venkatraman Krishnan, et al., (2019)</h5>
-<p><a href="https://doi.org/10.1093/mnras/staa111">MNRAS 492 4752</a>, <a href="https://arxiv.org/abs/1905.02415">arXiv:1905.02415</a>.</p>
-<hr>
-<h4>FRB191223 found at UTMOST</h4>
-<h5>Vivek Gupta, et al., (2019)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13363">The Astronomer's Telegram #13363</a>.</p>
-<hr>
-<h4>Detection of a glitch in PSR J0908-4913 by UTMOST</h4>
-<h5>Marcus E. Lower, et al., (2019)</h5>
-<p><a href="https://doi.org/10.3847/2515-5172/ab621d">Res. Notes AAS 3 192</a>, <a href="https://arxiv.org/abs/1912.10827">arXiv:1912.10827</a>.</p>
-<hr>
-<h4>FRB191107 found at UTMOST</h4>
-<h5>Vivek Gupta, et al., (2019)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=13282">The Astronomer's Telegram #13282</a>.</p>
-<hr>
-<h4>FRB190806 found at UTMOST</h4>
-<h5>Vivek Gupta, et al., (2019)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=12995">The Astronomer's Telegram #12995</a>.</p>
-<hr>
-<h4>Five new real-time detections of Fast Radio Bursts with UTMOST</h4>
-<h5>Wael Farah, et al., (2019)</h5>
-<p><a href="https://academic.oup.com/mnras/article-abstract/488/3/2989/5528327?redirectedFrom=fulltext">MNRAS 488 2989</a>, <a href="https://arxiv.org/abs/1905.02293">arXiv:1905.02293</a>.</p>
-<hr>
-<h4>The 2018 X-ray and Radio Outburst of Magnetar XTE J1810-197</h4>
-<h5>Eric V. Gotthelf et al., (2019)</h5>
-<p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/ab101a/meta">Astrophys. J. Lett. 874 L25</a>, <a href="https://arxiv.org/abs/1902.08358">arXiv:1902.08358</a>.</p>
-<hr>
-<h4>Wideband polarized radio emission from the newly revived radio magnetar XTE J1810-197</h4>
-<h5>Shi Dai, Marcus E. Lower, et al., (2019)</h5>
-<p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/ab0e7a/meta">Astrophys. J. Lett. 874 L14</a>, <a href="https://arxiv.org/abs/1902.04689">arXiv:1902.04689</a>.</p>
-<hr>
-<h4>Bilby: A user-friendly Bayesian inference library for gravitational-wave astronomy</h4>
-<h5>Greg Ashton et al., (2019)</h5>
-<p><a href="https://iopscience.iop.org/article/10.3847/1538-4365/ab06fc">Astrophys. J. Supp. 241 27</a>, <a href="https://arxiv.org/abs/1811.02042">arXiv:1811.02042</a>. Online repository for Bilby can be found <a href="https://git.ligo.org/lscsoft/bilby">here</a>.</p>
-<hr>
-<h4>Detection of FRB190322 at the Molonglo Radio Telescope</h4>
-<h5>Vivek Gupta, et al., (2019)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=12610">The Astronomer's Telegram #12610</a>.</p>
-<hr>
-<h4>Detection of FRB181228 at the Molonglo Radio Telescope</h4>
-<h5>Wael Farah et al., (2018)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=12335">The Astronomer's Telegram #12335</a>.</p>
-<hr>
-<h4>Detection of low-frequency radio emission from the magnetar XTE J1810-197</h4>
-<h5>Marcus E. Lower et al., (2018)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=12288">The Astronomer's Telegram #12288</a>.</p>
-<hr>
 <h4>Measuring eccentricity in binary black hole inspirals with gravitational waves</h4>
-<h5>Marcus E. Lower, Eric Thrane, Paul D. Lasky and Rory Smith, (2018)</h5>
+<h5>Marcus E. Lower, Eric Thrane, Paul D. Lasky and Rory Smith (2018)</h5>
 <p><a href="https://link.aps.org/doi/10.1103/PhysRevD.98.083028">Phys. Rev. D 98, 083028</a>, <a href="https://arxiv.org/abs/1806.05350">arXiv:1606.05350</a></p>
-<hr>
-<h4>Two new FRBs discovered by UTMOST</h4>
-<h5>Wael Farah, et al., (2018)</h5>
-<p><a href="http://www.astronomerstelegram.org/?read=12124&amp;fbclid=IwAR3zbeuPD1j42nWh38zTOQ0OabTTEO-5SeRbIJBYrLNJuEy_ys3NbodRT0A">The Astronomer's Telegram #12124</a></p>
-<hr>
-<h4>Detection of a glitch in the pulsar J1709-4429</h4>
-<h5>Marcus E. Lower, et al., (2018)</h5>
-<p><a href="https://doi.org/10.3847/2515-5172/aad7bc">Res. Notes AAS 2 139</a>, <a href="https://arxiv.org/abs/1808.02580">arXiv:1808.02580</a></p>
         </div>
     </section>
         </div>
@@ -289,7 +151,6 @@ Marcus Lower            </a>
     <li class="list-group-item"><a href="mailto:mlower@swin.edu.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
     <li class="list-group-item"><a href="http://twitter.com/astromelow"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
     <li class="list-group-item"><a href="https://github.com/mlower"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
-    <li class="list-group-item"><a href="https://git.ligo.org/marcus.lower"><i class="fa fa-gitlab fa-lg"></i> Gitlab</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
