--- a/pages/cv.html
+++ b/pages/cv.html
@@ -86,7 +86,7 @@ Marcus Lower            </a>
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1>Marcus Lower</h1>
+      <h1>Dr. Marcus Lower</h1>
 				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
@@ -103,7 +103,7 @@ Marcus Lower            </a>
             <p>Full version of my CV can be found <a href="../files/Marcus_Lower_CV.pdf">here</a>.</p>
 <h1>Education</h1>
 <ul>
-<li>PhD, Astrophysics, Swinburne University of Technology and CSIRO Space and Astonomy, 2018-2021</li>
+<li>PhD, Astrophysics, Swinburne University of Technology and CSIRO Space and Astonomy, 2018-2022</li>
 <li>BSc with 1st class honours in Astrophysics, Monash University, 2017</li>
 <li>BSc majoring in Astrophysics and Applied Mathematics, Monash University, 2014-2017</li>
 </ul>
@@ -139,11 +139,13 @@ Marcus Lower            </a>
 </ul>
 <h1>Affiliations</h1>
 <ul>
-<li>MeerTime Project</li>
-<li>UTMOST Collaboration</li>
-<li>ARC Centre of Excellence for Gravitational-wave Discovery (OzGrav)</li>
-<li>LIGO Scientific Collaboration</li>
 <li>Astronomical Society of Australia</li>
+<li>MeerTime Collaboration</li>
+<li>Parkes Pulsar Timing Array</li>
+<li>International Pulsar Timing Array</li>
+<li>CRAFT: The Commensal Real-time ASKAP Fast Transient Survey (affiliate)</li>
+<li>UTMOST Project (affiliate)</li>
+<li>OzGrav: The ARC Centre of Excellence for Gravitational-wave Discovery (affiliate)</li>
 </ul>
         </div>
     </section>
@@ -161,7 +163,6 @@ Marcus Lower            </a>
     <li class="list-group-item"><a href="mailto:mlower@swin.edu.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
     <li class="list-group-item"><a href="http://twitter.com/astromelow"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
     <li class="list-group-item"><a href="https://github.com/mlower"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
-    <li class="list-group-item"><a href="https://git.ligo.org/marcus.lower"><i class="fa fa-gitlab fa-lg"></i> Gitlab</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
