--- a/pages/resources.html
+++ b/pages/resources.html
@@ -86,7 +86,7 @@ Marcus Lower            </a>
 <div id="banner">
 	<div class="container">
 		<div class="copy">
-			<h1>Marcus Lower</h1>
+      <h1>Dr. Marcus Lower</h1>
 				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
@@ -127,7 +127,6 @@ Marcus Lower            </a>
     <li class="list-group-item"><a href="mailto:mlower@swin.edu.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
     <li class="list-group-item"><a href="http://twitter.com/astromelow"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
     <li class="list-group-item"><a href="https://github.com/mlower"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
-    <li class="list-group-item"><a href="https://git.ligo.org/marcus.lower"><i class="fa fa-gitlab fa-lg"></i> Gitlab</a></li>
   </ul>
 </li>
 <!-- End Sidebar/Social -->
