Updated news items and CV

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Mar 17 2023: <i>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</i> has now been officially been published. Read the open access article <a href="https://iopscience.iop.org/article/10.3847/1538-4357/acbc7c">here</a>.</li>
+<li>Mar 16 2023: George Younes, Zaven Arzoumanian and I wrote a short 'NICER/ISS Science Nugget' <a href="https://heasarc.gsfc.nasa.gov/docs/nicer/science_nuggets/latest_nugget.html?QuickLinksMenu=/xamin">outlining our recent paper on 1E 1547.0-5408</a>. </li>
+<li>Feb 14 2023: <i>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</i> has been accepted to ApJ! Read the pre-print here: <a href="https://arxiv.org/abs/2302.07397">arXiv:2302.07397</a>.</li>
 <li>Dec 21 2022: <i>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</i> submitted to ApJ.</li>
 <li>Dec 16 2022: I have officially graduated from my PhD at Swinburne University of Technology! <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Dr. Marcus Lower <a href="https://t.co/VIj8hj5ufr">pic.twitter.com/VIj8hj5ufr</a></p>&mdash; Marcus Lower (@astromelow) <a href="https://twitter.com/astromelow/status/1604815704737226753?ref_src=twsrc%5Etfw">December 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  </li>
 <li>Dec 2 2022: Today I am giving the MQAAAstro colloquium at Macquarie University where I am talking about <i>The Parkes magnetar monitoring programme</i>.</li>
