--- a/pages/cv.html
+++ b/pages/cv.html
@@ -132,10 +132,13 @@ Marcus Lower            </a>
 </ul>
 <h1>Academic Achievements</h1>
 <ul>
-<li>ASP4100: Astrophysics Honours Research Project</li>
+<li>ASA 2021 best student poster prize (3rd place), $100.</li>
+<li>CSIRO Space and Astronomy studentship, $5k travel grant.</li>
+<li>Swinburne Faculty of Science Engineering & Technology travel grant, $3k.</li>
+<li>ARC Laureate Fellow PhD Scholarship, Swinburne University of Technology, $81k.</li>
+<li>OzGrav student travel grant, $400</li>
 <li>Received a final grade of 87/100 for my honours thesis, titled ‘Detecting Eccentricity in the Orbits of Merging Binary Black Holes'. Supervised by Dr. Eric Thrane, Dr. Paul Lasky and Dr. Rory Smith.</li>
-<li>PHS3350: Physics/Astronomy Undergraduate Research Project.</li>
-<li>Received a final grade of 93/100 for my project titled ‘Can GW150914 reveal anything about darkmatter?’. Supervised by Dr. Eric Thrane and Dr. Letizia Sammut.</li>
+<li>Received a final grade of 93/100 for my undergraduate research project titled ‘Can GW150914 reveal anything about darkmatter?’. Supervised by Dr. Eric Thrane and Dr. Letizia Sammut.</li>
 </ul>
 <h1>Affiliations</h1>
 <ul>
