--- a/pages/publications.html
+++ b/pages/publications.html
@@ -107,14 +107,14 @@ Marcus Lower            </a>
             <p>Listed below are papers that have either been accepted or submitted to refereed journals where I am the first author.</p>
 
 <hr>
-<h4></h4>
-<h4>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</h4>
-<h5>Marcus E. Lower, George Younes, Paul Scholz, et al. (2022)</h5>
-<p>Submitted to The Astrophys. J.</p>
-<hr>
 <h4>A birefringent pair plasma within the near-field environment of a radio-loud magnetar</h4>
 <h5>Marcus E. Lower, Simon Johnston, Maxim Lyutokov, et al. (2022)</h5>
 <p>Submitted to Nature Astronomy.</p>
+<hr>
+<h4></h4>
+<h4>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</h4>
+<h5>Marcus E. Lower, George Younes, Paul Scholz, et al. (2023)</h5>
+<p><a href="https://iopscience.iop.org/article/10.3847/1538-4357/acbc7c">Astrophys. J. 945 153</a>, <a href="https://arxiv.org/abs/2302.07397">arXiv:2302.07397</a></p>
 <hr>
 <h4>The impact of glitches on young pulsar rotational evolution</h4>
 <h5>Marcus E. Lower, Simon Johnston, Liam Dunn, et al. (2021)</h5>
