--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Jul 3 2023: This week I am at Macquarie University in Sydney for this years' Astronomical Society of Australia annual meeting. I'll be presenting my work on asteroids around PSR J0738-4042. </li>
+<li>Jun 29 2023: Big news! Today the international pulsar timing community announced tentative evidence for a stochastic gravitational-wave background in data collected by five major experiments. Results from the Parkes Pulsar Timing Array search can be found <a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...951L...6R/abstract">here</a>. And <a href="https://theconversation.com/using-a-detector-the-size-of-a-galaxy-astronomers-find-strongest-evidence-yet-for-gravitational-waves-from-supermassive-black-hole-pairs-208484?">here's</a> a great summary of the results by study leads Daniel Reardon and Andrew Zic. </li>
+<li>Jun 22 2023: Today I am visiting the Jodrell Bank Centre for Astrophysics at the University of Manchester. I'll be giving a seminar on our recent work to understand the peculiar polarisation properties of a radio-loud magnetar.</li>
+<li>Jun 20 2023: <a href="https://www.physics.ox.ac.uk/our-people/oswald">Dr Lucy Oswald</a> and I have won a Royal Society International Exhange Grant to work together on understanding the polarisation properties of radio pulsars! </li>
+<li>Jun 18 2023: Off to visit collaborators at the University of Oxford for two weeks!</li>
+<li>Jun 12 2023: Next stop Greece! This week I'm attending the 'Timing and Imaging of compact sources with SKA pathfinders' conference in the ancient village of Kerastari. I will be giving an invited presentation on how young pulsars spin-down over time.</li>
+<li>May 28 2023: Starting my month of European travel with a two-week visit to the Max Planck Institute for Radioastronomie!</li>
+<li>May 9 2023: <i>Rotational and radio emission properties of PSR J0738-4042 over half a century</i> has been submitted to MNRAS.</li>
 <li>Mar 17 2023: <i>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</i> has now been officially been published. Read the open access article <a href="https://iopscience.iop.org/article/10.3847/1538-4357/acbc7c">here</a>.</li>
 <li>Mar 16 2023: George Younes, Zaven Arzoumanian and I wrote a short 'NICER/ISS Science Nugget' <a href="https://heasarc.gsfc.nasa.gov/docs/nicer/science_nuggets/latest_nugget.html?QuickLinksMenu=/xamin">outlining our recent paper on 1E 1547.0-5408</a>. </li>
 <li>Feb 14 2023: <i>The 2022 high-energy outburst and radio disappearing act of the magnetar 1E 1547.0-5408</i> has been accepted to ApJ! Read the pre-print here: <a href="https://arxiv.org/abs/2302.07397">arXiv:2302.07397</a>.</li>
