--- a/pages/cv.html
+++ b/pages/cv.html
@@ -132,6 +132,7 @@ Marcus Lower            </a>
 </ul>
 <h1>Academic Achievements</h1>
 <ul>
+<li>Royal Society International Exhange grand, co-awarded with Lucy Oswald, £6k.</li>
 <li>ASA 2021 best student poster prize (3rd place), $100.</li>
 <li>CSIRO Space and Astronomy studentship, $5k travel grant.</li>
 <li>Swinburne Faculty of Science Engineering & Technology travel grant, $3k.</li>
