--- a/pages/publications.html
+++ b/pages/publications.html
@@ -107,6 +107,11 @@ Marcus Lower            </a>
             <p>Listed below are papers that have either been accepted or submitted to refereed journals where I am the first author.</p>
 
 <hr>
+<h4>Rotational and radio emission properties of PSR J0738-4042 over half a century</h4>
+<h5>Marcus E. Lower, Simon Johnston, Aris Karastergiou, et al. (2023)</h5>
+<p>Submitted to MNRAS.</p>
+<hr>
+<h4></h4>
 <h4>A birefringent pair plasma within the near-field environment of a radio-loud magnetar</h4>
 <h5>Marcus E. Lower, Simon Johnston, Maxim Lyutokov, et al. (2022)</h5>
 <p>Submitted to Nature Astronomy.</p>
