--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Jul 22 2023: <i>Rotational and radio emission properties of PSR J0738-4042 over half a century</i> has been accepted to MNRAS! You can catch the pre-print version on arXiv <a href="https://arxiv.org/abs/2307.11953">here</a>.</li>
 <li>Jul 3 2023: This week I am at Macquarie University in Sydney for this years' Astronomical Society of Australia annual meeting. I'll be presenting my work on asteroids around PSR J0738-4042. </li>
 <li>Jun 29 2023: Big news! Today the international pulsar timing community announced tentative evidence for a stochastic gravitational-wave background in data collected by five major experiments. Results from the Parkes Pulsar Timing Array search can be found <a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...951L...6R/abstract">here</a>. And <a href="https://theconversation.com/using-a-detector-the-size-of-a-galaxy-astronomers-find-strongest-evidence-yet-for-gravitational-waves-from-supermassive-black-hole-pairs-208484?">here's</a> a great summary of the results by study leads Daniel Reardon and Andrew Zic. </li>
 <li>Jun 22 2023: Today I am visiting the Jodrell Bank Centre for Astrophysics at the University of Manchester. I'll be giving a seminar on our recent work to understand the peculiar polarisation properties of a radio-loud magnetar.</li>
@@ -221,7 +222,7 @@ Marcus Lower            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="mailto:mlower@swin.edu.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
+    <li class="list-group-item"><a href="mailto:marcus.lower@csiro.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
     <li class="list-group-item"><a href="http://twitter.com/astromelow"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
     <li class="list-group-item"><a href="https://github.com/mlower"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
   </ul>
