--- a/pages/p885_pubs.html
+++ b/pages/p885_pubs.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>List of publications using data from P885 and its precursor projects</title>
 <body>
+<h1>List of publications using data from P885 and its precursor projects</h1>
+
 
 <ol>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2006Natur.442..892C">Camilo, F., et al. 2006, 'Transient pulsed radio emission from a magnetar', Nature, 442, 892</a></li>
