Added Kramer et al. (2024) to p885_pubs.html

--- a/pages/p885_pubs.html
+++ b/pages/p885_pubs.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <body>
-<h1>List of publications using data from P885 and its precursor projects</h1>
-
+<h1>List of publications using data from P885 and its precursor projects:</h1>
 
 <ol>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2006Natur.442..892C">Camilo, F., et al. 2006, 'Transient pulsed radio emission from a magnetar', Nature, 442, 892</a></li>
@@ -14,7 +13,7 @@
   <li><a href="https://ui.adsabs.harvard.edu/abs/2007ApJ...669..561C">Camilo F., et al. 2007d, 'The Variable Radio-to-X-Ray Spectrum of the Magnetar XTE J1810-197', ApJ, 669, 561</a></li>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2008ApJ...676.1178H">Halpern, J. P., et al. 2008, 'Outburst of the 2 s Anomalous X-Ray Pulsar 1E 1547.0-5408', 676, 1178</a></li>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2008ApJ...676.1189M">Minter, A. H., et al. 2008, 'Neutral Hydrogen Absorption toward XTE J1810-197: The Distance to a Radio-emitting Magnetar', ApJ, 676, 1189</a></li>
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2008ApJ...679..681C">Camilo et al. 2008, 'The Magnetar 1E 1547.0-5408: Radio Spectrum, Polarimetry, and Timing', ApJ, 679, 681</a></li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2008ApJ...679..681C">Camilo, F. et al. 2008, 'The Magnetar 1E 1547.0-5408: Radio Spectrum, Polarimetry, and Timing', ApJ, 679, 681</a></li>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2012ApJ...748L...1D">Deller, A. T., et al. 2012, 'The Proper Motion of PSR J1550-5418 Measured with VLBI: A Second Magnetar Velocity Measurement', ApJL, 748, L1</a></li>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2016ApJ...820..110C">Camilo, F., et al. 2016, 'Radio Disappearance of the Magnetar XTE J1810-197 and Continued X-ray Timing', ApJ, 820, 110</a></li>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2017ApJ...841..126S">Scholz, P., et al., 2017, 'Spin-down Evolution and Radio Disappearance of the Magnetar PSR J1622-4950', ApJ, 841, 126</a></li>
@@ -28,6 +27,13 @@
   <li><a href="https://ui.adsabs.harvard.edu/abs/2024NatAs...8..606L">Lower, M. E., et al. 2024, 'Linear to circular conversion in the polarized radio emission of a magnetar', Nature Astronomy, 8, 606</a></li>
   <li><a href="https://ui.adsabs.harvard.edu/abs/2024ApJ...971L..13D">Ding, H., et al. 2024, 'VLBA Astrometry of the Fastest-spinning Magnetar Swift J1818.0‑1607: A Large Trigonometric Distance and a Small Transverse Velocity' ApJL, 971, L13</a></li>
 </ol>
+
+<h1>Papers by non-P885 team members:</h1>
+
+<ol>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2024NatAs...8..230K"></a>Kramer, M., et al. 2024, 'Quasi-periodic sub-pulse structure as a unifying feature for radio-emitting neutron stars', Nature Astronomy, 8, 230</li>
+</ol>
+  
   
 </body>
 </head>
