Fixed mistake in p885_pubs.html

--- a/pages/p885_pubs.html
+++ b/pages/p885_pubs.html
@@ -31,7 +31,7 @@
 <h1>Papers by non-P885 team members:</h1>
 
 <ol>
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2024NatAs...8..230K"></a>Kramer, M., et al. 2024, 'Quasi-periodic sub-pulse structure as a unifying feature for radio-emitting neutron stars', Nature Astronomy, 8, 230</li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2024NatAs...8..230K">Kramer, M., et al. 2024, 'Quasi-periodic sub-pulse structure as a unifying feature for radio-emitting neutron stars', Nature Astronomy, 8, 230</a></li>
 </ol>
   
   
