--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ Marcus Lower            </a>
      width="180" /></p>
 
 <p>
-  I am a CSIRO Early Research Career (CERC) postdoctoral research fellow at <a href="https://www.csiro.au/en/Research/Astronomy">CSIRO Astronomy and Space Science</a>.
-  My work primarily involves developing and using Bayesian inference techniques to learn more about the properties of pulsars - rotating neutron stars that emit beams of electromagnetic radiation from their magnetic poles.
+  I am an Australian Research Council 'DECRA' Fellow based at Swinburne Universities <a href="https://www.swinburne.edu.au/research/centres-groups-clinics/centre-for-astrophysics-supercomputing/">Centre for Astrophysics and Supercomputing</a>.
+  My work primarily involves developing and using Bayesian inference techniques to learn more about the properties of pulsars - rotating neutron stars that emit beams of electromagnetic radiation from their magnetic poles - and their links to links to the mysterious fast radio burst (FRB) phenomena. These FRBs are extremely bright, but vanishingly short-lived bursts of radio waves that come from distant galaxies.
   I am also the priniciple investigator of the Parkes `P574' young pulsar timing project, which uses the CSIRO 64-m Parkes radio telescope (AKA 'Murriyang') to monitor 270 energectic pulsars.
 </p>
 <p>Other interests of mine include follow-up parameter estimation of gravitational-wave events seen by Advanced LIGO and Virgo, and searches for the stochastic gravitational-wave background with pulsar timing arrays.</p>
