--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Marcus Lower            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
-    <li class="list-group-item"><a href="mailto:marcus.lower@csiro.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
+    <li class="list-group-item"><a href="mailto:mlower@swin.edu.au"><i class="fa fa-envelope fa-lg"></i> Email</a></li>
     <li class="list-group-item"><a href="http://twitter.com/astromelow"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
     <li class="list-group-item"><a href="https://github.com/mlower"><i class="fa fa-github-square fa-lg"></i> Github</a></li>
   </ul>
